gerando pdf e html
